--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,15 @@
 .buildlog/
 .history
 .svn/
+.gitignore
+
 
 # IntelliJ related
 *.iml
 *.ipr
 *.iws
 .idea/
+.packages
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
